--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,14 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
   background-color: #222;
-  height: 150px;
   padding: 20px;
   color: white;
 }
@@ -18,7 +12,24 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.board-row {
+  clear: both;
+  display: table;
+}
+
+.box {
+  height: 60px;
+  width: 60px;
+  float: left;
+}
+
+.game {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.board {
+  margin: auto;
+  padding: 20px;
 }
